welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var y : Boolean =false
  if (!estFaceMur()) {
    avance()
    if(color.green==getCouleurSol()) {
      y=true
    }
    recule()
  }
  y
}